# githubctl

./: .env.example  pyproject.toml
src/githubctl/: github.py  main.py  options.py  repo.csv  utils.py
